//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table bodies {
  id String [pk]
  name String [not null]
  acronym String
  roles roles [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table roles {
  id String [pk]  
  name String [not null]
  annualRoleValue Int
  bodies bodies [not null]
  contributors contributors [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table contributors {
  id String [pk]
  name String [not null]
  startDate DateTime
  endDate DateTime
  person persons [not null]
  role roles [not null]
  country countries [not null]
  workingGroups working_groups [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table persons {
  id String [pk]
  name String [not null]
  email String
  ORCID String
  contributors contributors [not null]
  institutions institutions [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table workingGroups {
  id String [pk]
  name String [not null]
  startDate DateTime
  endDate DateTime
  chairs contributors [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table institutions {
  id String [pk]
  name String [not null]
  types InstitutionType[] [not null]
  startDate DateTime
  endDate DateTime
  website String
  ROR String
  countries countries [not null]
  persons persons [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table countries {
  id String [pk]
  name String [not null]
  type CountryType [not null]
  startDate DateTime
  endDate DateTime
  logo String
  institutions institutions [not null]
  users users [not null]
  outreach outreach [not null]
  services services [not null]
  software software [not null]
  reports reports [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table services {
  id String [pk]
  name String [not null]
  type ServiceType [not null]
  size String [ref: > serviceSize.size]
  url String[]
  status ServiceStatus
  audience ServiceAudience
  agreements String
  valueProposition String
  sshoc ServiceSshocStatus
  privateSupplier Boolean
  trl Int
  technical_contact String
  eosc_onboarding Boolean
  monitoring Boolean
  dariah_branding Boolean
  countries countries [not null]

  reports service_reports [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table software {
  id String [pk]
  name String [not null]
  url String
  mpUrl String
  comment String
  softwareStatus SoftwareStatus
  mpOnboardingStatus mpOnboardingStatus [not null]
  countries countries [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table publication {
  id String [pk]
  title String [not null]
  url String
  citation String
  countries countries [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table outreach {
  id String [pk]
  url String [not null]
  type outreachType [not null]
  countries countries [not null]
  reports outreachReports [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table researchPolicyDevelopments {
  id String [pk]
  name String [not null]
  level ResearchPolicyLevel [not null]
  outcome String
  reports reports [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table eventReports {
  id String [pk]
  smallMeetings Int
  mediumMeetings Int
  largeMeetings Int
  dariahCommissionedEvent String
  reusableOutcomes String
  attendees Int
  reports reports [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table projectsFundingLeverage {
  id String [pk]
  name String [not null]
  amount Int
  totalAmount Int
  startDate DateTime
  projectLength Int
  funders String
  scope ProjectScope
  reports reports [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table serviceReports {
  id String [pk]
  /* interactions Int
  uniqueUsers Int
  registeredItems Int */
  serviceId String [not null]
  service services [not null]
  reportsId String [not null, ref: > reports.id]
  reports reports [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table serviceKpis {
  id String [pk]
  value Int
  unit serviceKpiType [not null]
  serviceReport String [ref: > serviceReports.id]  
}

Table serviceSize {
  size serviceSize [pk]
  annualValue Int  
}

Enum serviceSize {
  small
  medium
  large
  core
}

Table eventSize {
  size eventSize [pk]
  annualValue Int  
}

Enum eventSize {
  small
  medium
  large
  commissionedEvent
}

Table outreachReports {
  id String [pk]
  /* users Int
  pageViews Int
  sessions Int
  interactions Int
  uniqueUsers Int
  registeredItems Int */
  outreachId String [not null]
  reportsId String [ref: > reports.id]
  reports reports [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table outreachKpis {
  id String [pk]
  outreachReport String [ref: > outreachReports.id]    
  value Int
  unit outreachKpiType [not null]
 
}

Table reports {
  id String [pk]
  year Int [not null]
  comments Json /* why JSON? */
  countryId String [not null]
  countContributors Int [not null]
  country countries [not null]
  events eventReports [not null]
  operationalCost Int 

  projectsFundingLeverage projectsFundingLeverage [not null]
  services serviceReports [not null]
  outreach outreachReports [not null]
  researchPolicyDevelopments researchPolicyDevelopments [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (year, countryId) [unique]
  }
}

Table accounts {
  id String [pk]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  idToken String
  sessionState String
  userId String [not null]
  user users [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table users {
  id String [pk]
  name String
  email String [unique]
  emailVerified DateTime
  password String
  image String
  role UserRole [not null, default: 'contributor']
  status UserStatus [not null, default: 'unverified']
  accounts accounts [not null]
  countryId String
  country countries
}

Table bodyToRole {
  rolesId String [ref: > roles.id]
  bodiesId String [ref: > bodies.id]
}



Table contributorToWorkingGroup {
  workinggroupsId String [ref: > workingGroups.id]
  chairsId String [ref: > contributors.id]
}

Table institutionToPerson {
  institutionsId String [ref: > institutions.id]
  personsId String [ref: > persons.id]
}

Table countryToInstitution {
  countriesId String [ref: > countries.id]
  institutionsId String [ref: > institutions.id]
}

Table countryToOutreach {
  outreachId String [ref: > outreach.id]
  countriesId String [ref: > countries.id]
}

Table countryToService {
  servicesId String [ref: > services.id]
  countriesId String [ref: > countries.id]
}

Table countryToPublication {
  publicationId String [ref: > publication.id]
  countriesId String [ref: > countries.id]
}


Table countryToSoftware {
  softwareId String [ref: > software.id]
  countriesId String [ref: > countries.id]
}

Table institutionToService {
  servicesId String [ref: > services.id]
  institutionId String [ref: > institutions.id]
  role actorServiceRole
}

Table reportToResearchPolicyDevelopment {
  reportsId String [ref: > reports.id]
  researchPolicyDevelopmentsId String [ref: > researchPolicyDevelopments.id]
}

Table eventReportToReport {
  reportsId String [ref: > reports.id]
  eventsId String [ref: > eventReports.id]
}

Table projectsFundingLeverageToReport {
  reportsId String [ref: > reports.id]
  projectsfundingleverageId String [ref: > projectsFundingLeverage.id]
}


Enum  actorServiceRole {
  serviceProvider
  serviceOwner
  technicalContact
  contentProvider
  
}
Enum institutionType {
  cooperatingPartner
  nationalCoordinatingInstitution
  nationalRepresentativeInstitution
  partnerInstitution
  other
  
}

Enum countryType {
  cooperatingPartnership
  memberCountry
  other
}

Enum serviceType {
  community
  core
  internal
}

Enum serviceStatus {
  discontinued
  inPreparation
  live
  needsReview
  toBeDiscontinued
}

Enum serviceAudience {
  dariahTeam
  global
  nationalLocal
}

Enum outreachType {
  nationalWebsite
  socialMedia
}

Enum softwareStatus {
  maintained
  notMaintained
  needsReview
}

Enum mpOnboardingStatus {
  addedAsItem
  addedAsExternalId
  no
  notApplicable
}


Enum researchPolicyLevel {
  eu
  national
  institutional
}

Enum projectScope {
  eu
  national
  regional
}

Enum userRole {
  admin
  contributor
}

Enum userStatus {
  unverified
  verified
}

Enum serviceKpiType {
  visits
  pageViews
  jobsProcessed
  websitesHosted
  downloads
  hits
  searches
  sessions
  uniqueUsers
  registeredUsers
  items  
}

Enum outreachKpiType {
  engagement
  reach
  impressions
  followers
  mention
  pageViews
  uniqueVisitors
  subscribers
  newContent
  views
  watchTime
  posts
}

Ref: serviceReports.serviceId > services.id [delete: Cascade]

Ref: outreachReports.outreachId > outreach.id [delete: Cascade]

Ref: reports.countryId > countries.id [delete: Cascade]

Ref: accounts.userId > users.id [delete: Cascade]

Ref: users.countryId > countries.id

Ref: contributors.role > roles.id

Ref: contributors.person > persons.id

Ref: contributors.country > countries.id
